--- a/views/index.html
+++ b/views/index.html
@@ -1,12 +1,27 @@
-<!DOCTYPE html>
+<!--
+ * @Description: 
+ * @Version: 2.0
+ * @Author: zhouhong07
+ * @Date: 2020-05-28 09:53:21
+ * @LastEditors: zhouhong07
+ * @LastEditTime: 2020-05-28 10:15:48
+--> 
+<!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title><%=title%></title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <title>React App</title>
+  <link href="http://10.252.183.232:8000/build/static/css/main.css" rel="stylesheet">
 </head>
-<body>
-  <p>welcome to <%= title%></p>
+
+<body><noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <script src="http://10.252.183.232:8000/build/static/js/vendor-main.chunk.js"></script>
+  <script src="http://10.252.183.232:8000/build/static/js/main.js"></script>
 </body>
+
 </html>
