修改模板加载的资源链接

--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
  * @Author: zhouhong07
  * @Date: 2020-05-28 09:53:21
  * @LastEditors: zhouhong07
- * @LastEditTime: 2020-05-28 10:15:48
+ * @LastEditTime: 2020-06-04 19:39:27
 --> 
 <!doctype html>
 <html lang="en">
@@ -15,13 +15,13 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <title>React App</title>
-  <link href="http://10.252.183.232:8000/build/static/css/main.css" rel="stylesheet">
+  <link href="//rainbowzh.github.io/static/css/main.css" rel="stylesheet">
 </head>
 
 <body><noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <script src="http://10.252.183.232:8000/build/static/js/vendor-main.chunk.js"></script>
-  <script src="http://10.252.183.232:8000/build/static/js/main.js"></script>
+  <script src="//rainbowzh.github.io/static/js/vendor-main.chunk.js"></script>
+  <script src="//rainbowzh.github.io/static/js/main.js"></script>
 </body>
 
 </html>
