--- a/views/error.html
+++ b/views/error.html
@@ -1,3 +1,11 @@
+<!--
+ * @Description: 
+ * @Version: 2.0
+ * @Author: zhouhong07
+ * @Date: 2020-05-08 10:37:09
+ * @LastEditors: zhouhong07
+ * @LastEditTime: 2020-06-05 18:00:25
+--> 
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +15,6 @@
   <title>Document</title>
 </head>
 <body>
-  error
+  mobile--未开始
 </body>
 </html>
