--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
  * @Author: zhouhong07
  * @Date: 2020-05-28 09:53:21
  * @LastEditors: zhouhong07
- * @LastEditTime: 2020-06-04 19:39:27
+ * @LastEditTime: 2020-06-11 16:34:26
 --> 
 <!doctype html>
 <html lang="en">
@@ -16,6 +16,7 @@
   <meta name="description" content="Web site created using create-react-app" />
   <title>React App</title>
   <link href="//rainbowzh.github.io/static/css/main.css" rel="stylesheet">
+  <line href="//rainbowzh.github.io/static/css/vendor-main.chunk.css"></line>
 </head>
 
 <body><noscript>You need to enable JavaScript to run this app.</noscript>
