--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
  * @Author: zhouhong07
  * @Date: 2020-05-28 09:53:21
  * @LastEditors: zhouhong07
- * @LastEditTime: 2020-06-11 17:05:48
+ * @LastEditTime: 2020-06-11 17:11:20
 --> 
 <!doctype html>
 <html lang="en">
@@ -15,7 +15,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <title>React App</title>
-  <line href="//rainbowzh.github.io/static/css/vendor-main.chunk.css"></line>
+  <link href="//rainbowzh.github.io/static/css/vendor-main.chunk.css" rel="stylesheet"></link>
   <link href="//rainbowzh.github.io/static/css/main.css" rel="stylesheet">
 </head>
 
