添加js和css目录

--- a/views/mobile.html
+++ b/views/mobile.html
@@ -4,7 +4,7 @@
  * @Author: zhouhong07
  * @Date: 2020-05-08 10:37:09
  * @LastEditors: zhouhong07
- * @LastEditTime: 2020-06-05 18:00:25
+ * @LastEditTime: 2020-06-22 18:07:12
 --> 
 <!DOCTYPE html>
 <html lang="en">
@@ -13,8 +13,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">    
+  <link rel="stylesheet" href="//localhost:3000/css/mblog.7939ecb2.css">
 </head>
 <body>
-  mobile--未开始
+  <div id="root"></div>
+  <script src="https://unpkg.com/swiper/js/swiper.min.js"> </script>
+  <script src="//localhost:3000/js/mblog.7939ecb2.js"></script>
 </body>
 </html>
