修改数据库连接，添加新的js和css

--- a/views/index.html
+++ b/views/index.html
@@ -3,8 +3,8 @@
  * @Version: 2.0
  * @Author: zhouhong07
  * @Date: 2020-05-28 09:53:21
- * @LastEditors: zhouhong07
- * @LastEditTime: 2020-06-11 17:11:20
+ * @LastEditors: Please set LastEditors
+ * @LastEditTime: 2020-07-02 00:25:52
 --> 
 <!doctype html>
 <html lang="en">
@@ -15,14 +15,14 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <title>React App</title>
-  <link href="//rainbowzh.github.io/static/css/vendor-main.chunk.css" rel="stylesheet"></link>
-  <link href="//rainbowzh.github.io/static/css/main.css" rel="stylesheet">
+  <link href="//49.2325.235.22:3000/css/vendor-main.chunk.css" rel="stylesheet"></link>
+  <link href="//49.2325.235.22:3000/css/main.css" rel="stylesheet">
 </head>
 
 <body><noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <script src="//rainbowzh.github.io/static/js/vendor-main.chunk.js"></script>
-  <script src="//rainbowzh.github.io/static/js/main.js"></script>
+  <script src="//49.2325.235.22:3000/js/vendor-main.chunk.js"></script>
+  <script src="//49.2325.235.22:3000/js/main.js"></script>
 </body>
 
 </html>
