--- a/views/mobile.html
+++ b/views/mobile.html
@@ -3,8 +3,8 @@
  * @Version: 2.0
  * @Author: zhouhong07
  * @Date: 2020-05-08 10:37:09
- * @LastEditors: zhouhong07
- * @LastEditTime: 2020-06-22 18:07:12
+ * @LastEditors: Please set LastEditors
+ * @LastEditTime: 2020-07-02 00:25:39
 --> 
 <!DOCTYPE html>
 <html lang="en">
@@ -14,11 +14,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">    
-  <link rel="stylesheet" href="//localhost:3000/css/mblog.7939ecb2.css">
+  <link rel="stylesheet" href="//49.235.235.22:3000/css/mblog.7939ecb2.css">
 </head>
 <body>
   <div id="root"></div>
   <script src="https://unpkg.com/swiper/js/swiper.min.js"> </script>
-  <script src="//localhost:3000/js/mblog.7939ecb2.js"></script>
+  <script src="//49.235.235.22:3000/js/mblog.7939ecb2.js"></script>
 </body>
 </html>
