--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
  * @Author: zhouhong07
  * @Date: 2020-05-28 09:53:21
  * @LastEditors: zhouhong07
- * @LastEditTime: 2020-07-02 09:08:14
+ * @LastEditTime: 2020-07-02 15:56:18
 --> 
 <!doctype html>
 <html lang="en">
@@ -21,8 +21,8 @@
 
 <body><noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <script src="//49.235.235.22:3000/js/vendor-main.chunk.js"></script>
-  <script src="//49.235.235.22:3000/js/main.js"></script>
+  <script src="//49.235.235.22:3000/js/vendor-main.chunk-1.js"></script>
+  <script src="//49.235.235.22:3000/js/main-1.js"></script>
 </body>
 
 </html>
