--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
  * @Author: zhouhong07
  * @Date: 2020-05-28 09:53:21
  * @LastEditors: zhouhong07
- * @LastEditTime: 2020-07-02 16:01:07
+ * @LastEditTime: 2020-07-29 16:59:50
 --> 
 <!doctype html>
 <html lang="en">
@@ -14,7 +14,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <title>React App</title>
+  <title>Rainbow的个人空间</title>
   <link href="//49.235.235.22:3000/css/vendor-main.chunk.css" rel="stylesheet"></link>
   <link href="//49.235.235.22:3000/css/main.css" rel="stylesheet">
 </head>
