--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
  * @Author: zhouhong07
  * @Date: 2020-05-28 09:53:21
  * @LastEditors: zhouhong07
- * @LastEditTime: 2020-07-29 16:59:50
+ * @LastEditTime: 2020-07-29 17:28:40
 --> 
 <!doctype html>
 <html lang="en">
@@ -15,14 +15,14 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <title>Rainbow的个人空间</title>
-  <link href="//49.235.235.22:3000/css/vendor-main.chunk.css" rel="stylesheet"></link>
-  <link href="//49.235.235.22:3000/css/main.css" rel="stylesheet">
+  <link href="/css/vendor-main.chunk.css" rel="stylesheet"></link>
+  <link href="/css/main.css" rel="stylesheet">
 </head>
 
 <body><noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <script src="//49.235.235.22:3000/js/vendor-main.chunk.js"></script>
-  <script src="//49.235.235.22:3000/js/main.js"></script>
+  <script src="/js/vendor-main.chunk.js"></script>
+  <script src="/js/main.js"></script>
 </body>
 
 </html>
