--- a/views/index.html
+++ b/views/index.html
@@ -4,13 +4,14 @@
  * @Author: zhouhong07
  * @Date: 2020-05-28 09:53:21
  * @LastEditors: zhouhong07
- * @LastEditTime: 2020-07-29 17:28:40
+ * @LastEditTime: 2020-08-21 08:59:10
 --> 
 <!doctype html>
 <html lang="en">
 
 <head>
   <meta charset="utf-8" />
+  <link rel="icon" href="images/favicon.ico" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
